filter background images

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 .card0 {
     background: url('https://i.pinimg.com/736x/8f/a0/51/8fa051251f5ac2d0b756027089fbffde--terry-oneill-al-pacino.jpg') center center no-repeat;
     background-size: 300px;
+    filter: brightness(0.5) saturate(0) contrast(1.2);
 }
 
 .card0:hover {
@@ -45,6 +46,7 @@ body {
 .card1 {
     background: url('https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg') center center no-repeat;
     background-size: 300px;
+    filter: brightness(0.5) saturate(0) contrast(1.2);
 }
 
 .card1:hover {
@@ -55,6 +57,7 @@ body {
 .card2 {
     background: url('https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg') center center no-repeat;
     background-size: 300px;
+    filter: brightness(0.5) saturate(0) contrast(1.2);
 }
 
 .card2:hover {
